<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/contact_name"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/contact_name_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/contact_name_content"
                android:textColor="@android:color/black"
                android:lineSpacingExtra="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="40dp"/>

            <TextView
                android:id="@+id/contact_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/contact_phone"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/contact_phone_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/contact_phone_content"
                android:textColor="@android:color/black"
                android:lineSpacingExtra="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="40dp"/>

            <TextView
                android:id="@+id/contact_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/contact_email"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/contact_email_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/contact_email_content"
                android:textColor="@android:color/black"
                android:lineSpacingExtra="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="40dp"/>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>